--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -22,9 +22,8 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="~/css/responsive.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="~/css/custom.css" />
-    <link rel="stylesheet" href="~/css/custom-home-details-wishlist.css" />
     <link rel="stylesheet" href="~/css/chatbox.css" />
+    <link rel="stylesheet" href="~/css/custom-home-details-wishlist.css" />
 }
 
 <!-- Modal -->
@@ -152,24 +151,24 @@
                     <!-- start prod  -->
                     <div class="col-lg-3 col-md-6 special-grid best-seller">
                         <div class="products-single-custom fix">
-                            <a asp-controller="Index" asp-action="ShopDetail" title="@item.pName">
+                            <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
                                 <div class="box-img-hover">
                                     <div class="type-lb">
                                         <p class="sale">Sale</p>
                                     </div>
-                                    <img src=@item.pImgPath class="img-fluid shop-image" alt="Image" />
+                                    <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
                                 </div>
                             </a>
                             <div class="why-text">
                                 <h4>@item.pName</h4>
                                 @if (item.pDiscount != null)
                                 {
-                                    <h5>$@item.pSalePrice</h5>
-                                    <del>$@item.pPrice</del>
+                                    <h5>$ @item.p優惠價格</h5>
+                                    <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                    <h5>$@item.pPrice</h5>
+                                    <h5>$ @item.pPrice</h5>
                                 }
                                 <a data-product-id=@item.pId class="add-to-cart-coustom">
                                     <i class="fa-solid fa-cart-plus"></i>
@@ -231,19 +230,19 @@
                 {
                     <div class="col-lg-3 col-md-6 special-grid best-seller">
                         <div class="products-single-custom fix">
-                            <a asp-controller="Index" asp-action="ShopDetail" title="@item.pName">
+                            <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
                                 <div class="box-img-hover">
                                     <div class="type-lb">
                                         <p class="sale">Sale</p>
                                     </div>
-                                    <img src=@item.pImgPath class="img-fluid shop-image" alt="Image" />
+                                    <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
                                 </div>
                             </a>
                             <div class="why-text">
                                 <h4>@item.pName</h4>
                                 @if (item.pDiscount != null)
                                 {
-                                    <h5>$ @item.pSalePrice</h5>
+                                    <h5>$ @item.p優惠價格</h5>
                                     <del>$ @item.pPrice</del>
                                 }
                                 else
@@ -485,9 +484,6 @@
 <div class="body-font-style" id="go-to-game" title="進入遊戲">
     <a asp-controller="Game" asp-action="Index">貓貓大進擊<i class="fa-solid fa-gamepad"></i></a>
 </div>
-
-
-
 <div id="body">
     <div id="chat-circle" class="btn btn-raised">
         <div id="chat-overlay"></div>
@@ -523,6 +519,7 @@
     <!-- ALL JS FILES -->
     <!-- 首頁跑版 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
     <!--<script src="~/js/jquery-3.2.1.min.js"></script>-->
     <script src="~/js/popper.min.js"></script>
     
@@ -546,12 +543,51 @@
     <script src="~/js/baguetteBox.min.js"></script>
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
-    <script src="~/js/custom-home-details-wishlist.js"></script>
+    <script src="~/js/custom.js"></script>
+    
     <script>
         //所有頁面上不可有相同id
         var productIndexNew = $('#productIndexNew');
         var productIndexSale = $('#productIndexSale');
 
+        // 點擊商品時獲取識別ID
+        productIndexNew.on('click', '.shop-prod-click', function () {
+            
+            console.log(productIndexNew);
+            var productId = $(this).data('product-id');
+            console.log('Clicked product ID:', productId);
+            $.ajax({
+                url: '/ProductApi/GetDetail',
+                type: 'GET',
+                data: { pId: productId },
+                dataType: 'html',
+                success: function (response) {
+                    console.log('GoToDetail:', response.message);
+                },
+                error: function (error) {
+                    console.error('Ajax Error:', error);
+                }
+            });
+        });
+        productIndexSale.on('click', '.shop-prod-click', function () {
+            console.log(productIndexSale);
+            var productId = $(this).data('product-id');
+            console.log('Clicked product ID:', productId);
+            $.ajax({
+                url: '/ProductApi/GetDetail',
+                type: 'GET',
+                data: { pId: productId },
+                dataType: 'html',
+                success: function (response) {
+                    console.log('Added to Cart:', response.message);
+                },
+                error: function (error) {
+                    console.error('Ajax Error:', error);
+                }
+            });
+        });
+
+        //點加入購物車獲取id
         productIndexNew.on('click', '.add-to-cart-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
             console.log(productIndexNew);
@@ -572,6 +608,7 @@
                 }
             });
         });
+
         productIndexSale.on('click', '.add-to-cart-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
             console.log(productIndexSale);
@@ -707,6 +744,5 @@
             // 手動進行轉跳
             window.location.href = '/Game/Index';
         });
-
 </script>
 }
