--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -157,6 +157,7 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     @* <script src="~/js/custom.js"></script> *@
-    <script src="~/js/custom-home-details-wishlist.js"></script>
+    <script src="~/js/custom.js"></script>
+    <script src="~/js/forindex.js"></script>
 }
 
