--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
@@ -1,5 +1,28 @@
 
 /** ADD YOUR AWESOME CODES HERE **/
+
+/** ADD YOUR AWESOME CODES HERE **/
+.for_header_twoIcon {
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 2rem;
+    background-color: red;
+    color: white;
+    position: absolute;
+    width: 1rem;
+}
+
+.material-symbols-outlined, .Login span {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.all-title-box-picture {
+    background-image: url(../images/CatCha/Cart_BigTitle.jpg);
+}
 /*-----------------------------首頁圓形分類-----------------------------*/
 body{
   background-color: #f8f9fa;
