--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/IndexAnimateforGame.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/IndexAnimateforGame.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999; 
-    background: #ff2b85; 
+    background-color: white; 
 }
 
 .NyanCat-container {
