--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
@@ -347,7 +347,8 @@
                                                 <li>
                                                     <select class="form-select"
                                                             aria-label="Default select example">
-                                                        <option selected>7-11</option>
+                                                        <option selected></option>
+                                                        <option>7-11</option>
                                                         <option value="1">全家</option>
                                                         <option value="2">OK</option>
                                                         <option value="3">萊爾富</option>
