--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/gachabutton.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/gachabutton.css
@@ -103,3 +103,9 @@
     font-family: ·L³n¥¿¶ÂÅé;
     font-size: 20px;
 }
+.animation-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index:99;
+    position:relative;
+}
+
